--- a/2-css-reset-with-normalize/start/index.html
+++ b/2-css-reset-with-normalize/start/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Best City Guide</title>
 	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="wrap">
-		
-		<header class="main-header">
-			<div class="container clearfix">
-				<h1 class="name"><a href="#">Best City Guide</a></h1>
-				<ul class="main-nav">
-					<li><a href="#">ice cream</a></li>
-					<li><a href="#">donuts</a></li>
-					<li><a href="#">tea</a></li>
-					<li><a href="#">coffee</a></li>
-				</ul>
-			</div>
-		</header>
-		
-		<div class="container clearfix">	
-			
+	
+	<header class="main-header clearfix">
+		<div class="container">
+			<h1 class="name"><a href="#">Best City Guide</a></h1>
+			<ul class="main-nav">
+				<li><a href="#">ice cream</a></li>
+				<li><a href="#">donuts</a></li>
+				<li><a href="#">tea</a></li>
+				<li><a href="#">coffee</a></li>
+			</ul>
+		</div>
+	</header><!--/.main-header-->   
+		<div class="banner clearfix">
+			<img class="logo" src="img/city-logo.svg" alt="City">
+			<h1 class="headline">The Best City</h1>
+			<span class="tagline">The best drinks and eats in the best city ever.</span>
+		</div><!--/.banner-->
+		<div class="container">
 			<div class="secondary col">
 				<h2>Welcome!</h2>
 				<p>Everything in this city is worth waiting in line for.</p>
@@ -33,17 +36,21 @@
 			<div class="primary col">
 				<h2>Great food</h2>
 				<img class="feat-img" src="img/treats.svg" alt="Drinks and eats">
-				<p>Croissant macaroon pie brownie. Cookie marshmallow liquorice gingerbread caramels toffee I love chocolate. Wafer lollipop dessert. Bonbon jelly beans pudding dessert sugar plum.</p>
-				<p>Marzipan toffee drag&#233;e chocolate bar candy toffee pudding I love. Gummi bears pie gingerbread lollipop.</p>
-				<p> Fruitcake jelly-o croissant souffl&#233; . Biscuit jujubes drag&#233;e. Sesame snaps tootsie roll chocolate bar cake tart macaroon pudding. Ice cream gummies jujubes cupcake. Cake marshmallow cookie lollipop tart. Tootsie roll bear claw marzipan jujubes wafer tart chocolate bar cake biscuit. Jelly beans danish pastry apple pie fruitcake. Jelly-o icing candy canes lollipop tiramisu</p>
+				<p>Croissant macaroon pie brownie. Cookie marshmallow liquorice gingerbread caramels toffee I love chocolate. Wafer lollipop dessert. Bonbon jelly beans pudding dessert sugar plum. Marzipan toffee drag&#233;e chocolate bar candy toffee pudding I love. Gummi bears pie gingerbread lollipop.</p>
 			</div><!--/.primary-->
 			
-		</div><!--/.container-->
-		
-	</div><!--/.wrap-->
-	
+			<div class="tertiary col">
+				<h2>How to get here</h2>
+				<p><strong>Plane: </strong>Tiramisu caramels gummies chupa chups lollipop muffin. Jujubes chocolate caramels cheesecake brownie lollipop drag&#233;e cheesecake.</p>
+				<p><strong>Train: </strong>Pie apple pie pudding I love wafer toffee liquorice sesame snaps lemon drops. Lollipop gummi bears dessert muffin I love fruitcake toffee pie.</p>
+				<p><strong>Car: </strong>Jelly cotton candy bonbon jelly-o jelly-o I love. I love sugar plum chocolate cake pie I love pastry liquorice.</p>
+			</div><!--/.tertiary-->	
+		</div>
+	</div>
 	<footer class="main-footer">
-	 <span>&copy;2015 Residents of The Best City Ever.</span>
+		<span>&copy;2015 Residents of The Best City Ever.</span>
 	</footer>
+
+	
 </body>
 </html>
