--- a/2-css-reset-with-normalize/start/index.html
+++ b/2-css-reset-with-normalize/start/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	
-	<header class="main-header clearfix">
-		<div class="container">
+	<header class="main-header">
+		<div class="container clearfix">
 			<h1 class="name"><a href="#">Best City Guide</a></h1>
 			<ul class="main-nav">
 				<li><a href="#">ice cream</a></li>
@@ -20,12 +20,12 @@
 			</ul>
 		</div>
 	</header><!--/.main-header-->   
-		<div class="banner clearfix">
+		<div class="banner">
 			<img class="logo" src="img/city-logo.svg" alt="City">
 			<h1 class="headline">The Best City</h1>
 			<span class="tagline">The best drinks and eats in the best city ever.</span>
 		</div><!--/.banner-->
-		<div class="container">
+		<div class="container clearfix">
 			<div class="secondary col">
 				<h2>Welcome!</h2>
 				<p>Everything in this city is worth waiting in line for.</p>
